# RustDemoTest

./: Cargo.toml  LICENSE  README.md
src/: auto_sign_machine.rs  cli.yml  main.rs
src/commands/: mod.rs  unicomc.rs
src/commands/unicom/: mod.rs  unicom.rs
src/utils/: mod.rs  scheduler.rs
