[package]
name = "auto_sign_machine_badly"
version = "0.1.0"
authors = ["lunnlew <lunnlew@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
clap = {version = "~2.32.0", features = ["yaml"]}
serde = "1.0.124"